[package]
name = "dead-good-html-to-rsx-converter"
version = "0.3.0"
edition = "2021"
license = "Unlicense"
description = "Convert html into rsx."
homepage = "https://github.com/PurpleBooth/dead-good-html-to-rsx-converter"
readme = "README.md"
keywords = ["dioxus", "html", "rsx"]
categories = ["parser-implementations"]
repository = "https://github.com/PurpleBooth/dead-good-html-to-rsx-converter"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
tl = "0.7.7"
[dev-dependencies]
indoc = { version = "2", features = [] }
